# dax_apdb_deploy

./: .gitignore  .pre-commit-config.yaml  .yamllint.yaml  Makefile  README.md  ansible.cfg  collections.yml  inventory-apdb_dev.yaml  inventory-apdb_int.yaml  inventory-apdb_test.yaml  inventory.yml  mypy.ini  pyproject.toml  requirements.txt  setup.sh
cassandra_cluster/: README.md  accounts.yml  bootstrap.yml  down.yml  medusa-restore.yml  nodetool.yml  prep-cluster-restore.yml  rolling-restart.yml  site-init.yml  site.yml  up.yml
cassandra_cluster/filter_plugins/: filters.py
cassandra_cluster/group_vars/: all.yml  apdb_dev.yaml  apdb_dev.yml  apdb_int.yml  apdb_prod.yml  apdb_test.yml
cassandra_cluster/roles/cassandra/defaults/: main.yml
cassandra_cluster/roles/cassandra/handlers/: main.yml
cassandra_cluster/roles/cassandra/tasks/: main.yml
cassandra_cluster/roles/cassandra/templates/: docker-compose.yml.j2
cassandra_cluster/roles/cassandra/vars/: main.yml
cassandra_cluster/roles/cassandra_accounts/: README.md
cassandra_cluster/roles/cassandra_accounts/defaults/: main.yml
cassandra_cluster/roles/cassandra_accounts/handlers/: main.yml
cassandra_cluster/roles/cassandra_accounts/meta/: main.yml
cassandra_cluster/roles/cassandra_accounts/tasks/: main.yml
cassandra_cluster/roles/cassandra_accounts/tests/: test.yml
cassandra_cluster/roles/cassandra_accounts/vars/: main.yml
cassandra_cluster/roles/cassandra_configs/: README.md
cassandra_cluster/roles/cassandra_configs/defaults/: main.yml
cassandra_cluster/roles/cassandra_configs/files/: jvm-server.options.patch  jvm11-server.options.patch  jvm17-server.options.patch
cassandra_cluster/roles/cassandra_configs/filter_plugins/: filters.py
cassandra_cluster/roles/cassandra_configs/handlers/: main.yml
cassandra_cluster/roles/cassandra_configs/meta/: main.yml
cassandra_cluster/roles/cassandra_configs/tasks/: main.yml
cassandra_cluster/roles/cassandra_configs/templates/: cassandra-local.yaml.j2
cassandra_cluster/roles/cassandra_configs/tests/: test.yml
cassandra_cluster/roles/cassandra_configs/vars/: main.yml
cassandra_cluster/roles/cassandra_files/: README.md
cassandra_cluster/roles/cassandra_files/defaults/: main.yml
cassandra_cluster/roles/cassandra_files/files/: entrypoint-wrapper.sh
cassandra_cluster/roles/cassandra_files/handlers/: main.yml
cassandra_cluster/roles/cassandra_files/meta/: main.yml
cassandra_cluster/roles/cassandra_files/tasks/: main.yml
cassandra_cluster/roles/cassandra_files/templates/: cqlsh-wrapper.sh.j2  docker-compose.yml.j2  nodetool-wrapper.sh.j2
cassandra_cluster/roles/cassandra_files/tests/: test.yml
cassandra_cluster/roles/cassandra_files/vars/: main.yml
cassandra_cluster/roles/common/tasks/: main.yml
cassandra_cluster/roles/jolokia/tasks/: main.yml
cassandra_cluster/roles/jolokia/vars/: main.yml
cassandra_cluster/roles/jolokia_download/: README.md
cassandra_cluster/roles/jolokia_download/defaults/: main.yml
cassandra_cluster/roles/jolokia_download/handlers/: main.yml
cassandra_cluster/roles/jolokia_download/meta/: main.yml
cassandra_cluster/roles/jolokia_download/tasks/: main.yml
cassandra_cluster/roles/jolokia_download/tests/: test.yml
cassandra_cluster/roles/jolokia_download/vars/: main.yml
cassandra_cluster/roles/make_credentials/: README.md
cassandra_cluster/roles/make_credentials/defaults/: main.yml
cassandra_cluster/roles/make_credentials/handlers/: main.yml
cassandra_cluster/roles/make_credentials/meta/: main.yml
cassandra_cluster/roles/make_credentials/tasks/: main.yml
cassandra_cluster/roles/make_credentials/tests/: test.yml
cassandra_cluster/roles/make_credentials/vars/: main.yml
cassandra_cluster/roles/medusa_configs/: README.md
cassandra_cluster/roles/medusa_configs/defaults/: main.yml
cassandra_cluster/roles/medusa_configs/handlers/: main.yml
cassandra_cluster/roles/medusa_restore/: README.md
cassandra_cluster/roles/prep-cluster-restore/: README.md
cassandra_cluster/roles/prep_restore/: README.md
cassandra_cluster/roles/remote_folders/: README.md
cassandra_cluster/roles/telegraf/: README.md
cassandra_cluster/up_tasks/: down-node.yml  up-node.yml  up-seed.yml
etc/cron/: backup-cleanup-job.sh  backup-job.sh  check-connect.sh  daily-backup.sh  repair-job.sh
inventory/: README.md  apdb_dev.yaml  apdb_prod.yaml  apdb_test.yaml
(+56 files in other folders)
